Overflow issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,9 @@
   --secondary: #c4c4c4;
   --highlight: #ff6340;
 }
+html,
 body {
   font-family: "Poppins", sans-serif;
-  width: 100%;
   height: 100%;
   background-color: var(--bg-color);
   color: var(--secondary);
